Fixed the camera on mobile screens.

--- a/client/source/views/Camera.view.less
+++ b/client/source/views/Camera.view.less
@@ -1,11 +1,11 @@
 .Camera {
-    width: 300px;
-    height: 300px;
+    width: 7em;
+    height: 7em;
 
     transition-duration: 2s;
     transition-property: transform;
 
-    perspective: 50000000000px;
+    perspective: 50000em;
     transform-origin: 0% 0% 0;
     transform-style: preserve-3d;
 }
