--- a/client/source/views/View.less
+++ b/client/source/views/View.less
@@ -17,11 +17,11 @@ body {
 
 @font-face {
     font-family: "comfortaa";
-    src: url("fonts/comfortaa.ttf") format("truetype");
+    src: url("../fonts/comfortaa.ttf") format("truetype");
 }
 
 .Game {
     left: 50%;
-    bottom: 2em;
+    bottom: 5em;
     position: absolute;
 }
